--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="icon" type="image/x-icon" href="/assets/images/bobo.png" />
     <!-- font links -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic:regular" rel="stylesheet" />
     <title>Personal Card</title>
   </head>
   <body>
     <main class="card">
         <div class="title-content">
-            <img src="/assets/images/bobo.png" alt="BeatriceWambuiMbugua" width="50px" height="50px"/>
+            <img src="/assets/images/bobo.png" alt="BeatriceWambuiMbugua" data-testid="slackDisplayImage"/>
             <h2 data-testid="slackUserName">Beatrice Wambui Mbugua</h2>
         </div>
 
