Change element id from "miliSeconds" to "currentUTCTime" and add data-testid attribute.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="card-day">Today is on</p>
         <p id="day" class="card-day"></p>
         <p class="card-day">and the miliseconds in UTC are</p>
-        <p id="miliSeconds"></p>
+        <p id="miliSeconds" data-testid="currentUTCTime"></p>
       </div>
     </main>
 
