Fix alignment and add button link to Github profile

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           data-testid="slackDisplayImage"
         />
         <div>
-            <h2 data-testid="slackUserName">Beatrice Wambui Mbugua</h2>
-            <p data-testid="myTrack">FrontEnd</p>
+            <h2 style="margin: 0px;" data-testid="slackUserName">Beatrice Wambui Mbugua</h2>
+            <p style="margin: 0px;" data-testid="myTrack">FrontEnd</p>
         </div>
        
       </div>
@@ -39,7 +39,9 @@
         <p id="miliSeconds" data-testid="currentUTCTime"></p>
       </div>
 
-      
+      <div class="card-button">
+        <a class="button" href="https://github.com/BeatriceWambuiMbugua">Github</a>
+      </div>
     </main>
 
     <script type="text/javascript">
