[Buttons] Improve accessibility by adding testid attribute to the Github link

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <p id="miliSeconds" data-testid="currentUTCTime"></p>
       </div>
 
-      <div class="card-button">
-        <a class="button" href="https://github.com/BeatriceWambuiMbugua">Github</a>
+      <div class="card-button" data-testid=“githubURL”>
+        <a class="button" href="https://github.com/BeatriceWambuiMbugua/frontend-task-one">Github</a>
       </div>
     </main>
 
