Fix formatting and attribute names in index.html for better readability and functionality.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
           data-testid="slackDisplayImage"
         />
         <div>
-            <h2 style="margin: 0px;" data-testid="slackUserName">Beatrice Wambui Mbugua</h2>
-            <p style="margin: 0px;" data-testid="myTrack">FrontEnd</p>
+          <h2 style="margin: 0px" data-testid="slackUserName">
+            Beatrice Wambui Mbugua
+          </h2>
+          <p style="margin: 0px" data-testid="myTrack">FrontEnd</p>
         </div>
-       
       </div>
 
       <div class="card-date" data-testid="currentDayOfTheWeek">
@@ -39,8 +40,12 @@
         <p id="miliSeconds" data-testid="currentUTCTime"></p>
       </div>
 
-      <div class="card-button" data-testid=“githubURL”>
-        <a class="button" href="https://github.com/BeatriceWambuiMbugua/frontend-task-one">Github</a>
+      <div class="card-button" data-testid="“githubURL”">
+        <a
+          class="button"
+          href="https://github.com/BeatriceWambuiMbugua/frontend-task-one"
+          >Github</a
+        >
       </div>
     </main>
 
