Fix missing data-testid attribute in index.html for card-date and card-button elements

--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
         </div>
       </div>
 
-      <div class="card-date" data-testid="currentDayOfTheWeek">
+      <div class="card-date" >
         <p class="card-day">Today is on</p>
-        <p id="day" class="card-day"></p>
+        <p id="day" class="card-day" data-testid="currentDayOfTheWeek"></p>
         <p class="card-day">and the miliseconds in UTC are</p>
         <p id="miliSeconds" data-testid="currentUTCTime"></p>
       </div>
 
-      <div class="card-button" data-testid="“githubURL”">
+      <div class="card-button">
         <a
           class="button"
+          data-testid=“githubURL”
           href="https://github.com/BeatriceWambuiMbugua/frontend-task-one"
           >Github</a
         >
