add margin right to the paragraphs content

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p data-testid="currentDayOfTheWeek" id="day" class="card-day"></p>
       </div>
       <div class="card-data">
-        <p class="card-day">Miliseconds:</p>
+        <p class="card-day">Milliseconds:</p>
         <p data-testid="currentUTCTime" id="miliSeconds"></p>
       </div>
 
