Add a new image file `bobo.jpg` and update the `src` attribute in `index.html` to use the new image. This change is necessary as the previous `bobo.png` image file has been deleted.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main class="card">
       <img
         data-testid="slackDisplayImage"
-        src="/assets/images/bobo.png"
+        src="/assets/images/bobo.jpg"
         alt="Beatrice Wambui Mbugua"
       />
       <h2 data-testid="slackUserName">Beatrice Wambui Mbugua</h2>
